--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "node": "10"
   },
   "dependencies": {
-    "discord.js": "^11.5.1",
+    "discord.js": "^11.3.1",
+    "mysql": "latest"
     "quick.db": "^6.3.2",
     "ascii-table": "^0.0.9",
     "common-tags": "^1.8.0",
