--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   },
   "dependencies": {
     "discord.js": "^11.3.1",
-    "mysql": "latest"
+    "mysql": "latest",
     "ascii-table": "^0.0.9",
   }
 }
