--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "discord.js": "^11.3.1",
     "snekfetch": "^3.6.4",
     "mysql": "latest",
+    "ascii-table": "latest",
     "express": "^4.16.3"
   }
 }
