--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "snekfetch": "^3.6.4",
     "mysql": "latest",
     "ascii-table": "latest",
-    "express": "^4.16.3"
+    "express": "^4.16.3",
+    "quick.db": "latest"
   }
 }
