--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "snekfetch": "^3.6.4",
     "mysql": "latest",
     "ascii-table": "latest",
+    "covid19-api": "^1.0.6",
+    "covid19-stats": "^1.0.5",
     "express": "^4.16.3",
     "quick.db": "latest"
   }
